--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "vite-html",
+  "homepage": "https://zidfut.github.io/solus-group/",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "glob": "^11.0.1",
     "sass": "^1.85.0",
     "vite": "^6.1.0",
